--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@
 <body>
 
 <div class="w3-container w3-red">
-  <h1>Supra</h1>
+  <h1>Toyota Supra</h1>
 </div>
 
 <img src="https://cdn1-production-images-kly.akamaized.net/A65NTg_-50nqY236ydRIhyFhxFc=/0x0/smart/filters:quality(75):strip_icc():format(jpeg)/kly-media-production/medias/3695826/original/003903600_1639470817-toyota-supra-heritage-edition--apa-yang-beda--daf2ae.jpg" alt="Car" style="width:100%">
 
 <div class="w3-container">
-  <p>A car is a wheeled, self-powered motor vehicle used for transportation. Most definitions of the term specify that cars are designed to run primarily on roads. (Wikipedia)</p>
+  <p>A car is a wheeled, self-powered motor vehicle used for transportation. Most definitions of the term specify that cars are designed to run primarily on roads.</p>
+  <p>Toyota Supra is a sports car and grand tourer manufactured by Toyota Motor Corporation beginning in 1978. The name "supra" is derived from the Latin prefix, meaning "above", "to surprass" or "go beyond". (Wikipedia)</p>
 </div>
 
-<div class="w3-container w3-red">
-  <h5>copyright 2023</h5>
-</div>
+<footer class="w3-container w3-red">
+  <h6>&copy; copyright 2023 - Toyota Supra</h6>
+</footer>
 
 </body>
 </html>
